@@ -37,8 +37,7 @@
             X <- x$c1
         else stop("Can't find scores")
     }
-    else if (is.matrix(x)) 
-        X <- x
+    X <- as.matrix(x)
     if (is.null(rownames(X))) {
         root <- substr(display, 1, 4)
         rownames(X) <- paste(root, 1:nrow(X), sep = "")
@@ -46,7 +45,7 @@
     if (is.null(colnames(X))) 
         colnames(X) <- paste("Dim", 1:ncol(X), sep = "")
     if (!missing(choices)) 
-        X <- X[, choices]
+        X <- X[, choices, drop = FALSE]
     X <- as.matrix(X)
     X
 }
